--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.15",
     "prisma": "^5.10.2",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
@@ -21,8 +25,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13"
   }
 }
